--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -1,6 +1,50 @@
 {
   "settings" : "الاعدادات",
   "home" : "الرئيسية",
-  "information" : "عن الشركة"
+  "information" : "عن الشركة",
+  "Services" : "خدماتنا",
+  "See all" : "عرض الكل",
+  "it Services" : "خدمات it",
+  "Smart Home" : "Smart Home",
+  "Marketing" : "التسويق",
+  "Call Center" : "كول سنتر",
+  "Shipping" : "الشحن",
+  "Popular" : "الأكثر مبيعاً",
+
+  "شغل صفحة information  ********************" : "******************* شغل صفحة  information ",
+  "\uD83D\uDCCD Tanta, Gharbia, EGY" : "\uD83D\uDCCD طـنـطـا, الغربـيـة, مـصـر",
+  "About us .." : "عـن الشركـة ..",
+  "   customize and convenient POS system that can be adoptable every industry.The best comprehensive company in Egypt, started as a company specialized in the field of computing and point of sale solutions, we jumped into the professional POS business and has grown since into point of sale, Hardware sales and POS solution supplier." : "  نظام نقاط البيع المخصص والمريح الذي يمكن اعتماده في كل صناعة. بدأت أفضل شركة شاملة في مصر ، كشركة متخصصة في مجال الحوسبة وحلول نقاط البيع ، قفزنا إلى أعمال نقاط البيع الاحترافية ونمت منذ ذلك الحين حتى نقطة البيع ومبيعات الأجهزة ومورد حلول نقاط البيع.",
+  "Our Mission .." : "مـهـمـتـنــا ..",
+  "   Our Mission is to achieve the reputation of a quality, high standard & reliable solution & service Provider company in the ICT industry." : "   مهمتنا هي تحقيق سمعة شركة تقدم حلول وخدمات عالية الجودة ومعايير عالية وموثوق بها في صناعة تكنولوجيا المعلومات والاتصالات.",
+  "Our Vision .." : "رؤيتـنــا",
+  "   Our Vision is to achieve 100% customer satisfaction by delivering quality products and service at an affordable cost. we are aiming to become an entity in technology based corporate solutions, capable of demanding unconditional response from the targeted niche." : "   تتمثل رؤيتنا في تحقيق رضا العملاء بنسبة 100٪ من خلال تقديم منتجات وخدمات عالية الجودة بتكلفة معقولة. نحن نهدف إلى أن نصبح كيانًا في حلول الشركات القائمة على التكنولوجيا ، قادرة على المطالبة باستجابة غير مشروطة من المكانة المستهدفة.",
+  "Follow us" : "تابعـــنـا",
+  "Share with Brilliant" : "تشارك مع شركتنا",
+  "Request Service" : " أطلـب خدمـتـك",
+  "Whatsapp" : " واتـس اب",
+  "Contact" : "تواصل",
+  "Phone" : " الاتصال",
+  "Call now" : "اتصل الان",
+  "Mail us" : "راسـلنــا",
+  "Call us" : "اتصل بنا",
+
+  "شغل صفحة الاعدادات*********************" : "*******************شغل صفحة الاعدادات",
+  "Settings" : "الإعدادات",
+  "General" : "عام",
+  "Change appearance" : "تغير المظهر",
+  "You want change to " : "هل تريد تغير المظهر الي ",
+  "Night mode" : "الوضع الداكن",
+  "Light mode" : "الوضع العادي",
+  "Change Language" : "تغير اللغـة",
+  "You want change language to " : "هل تريد تغير اللغة الي ",
+  "Cancel" : "الغاء",
+  "View" : "مخصص",
+  "faq" : "الاسئلة الشائعة",
+  "feature" : "المميزات",
+  "Documentation" : "الاقتراحات والشكاوي",
+  "BUY NOW" : "اطلـــب الان",
+  "" : ""
+
 
 }
