--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,6 +1,48 @@
 {
   "settings" : "settings",
   "home" : "Home",
-  "information" : "Information"
+  "information" : "Information",
+  "Services" : "Services",
+  "See all" : "See all",
+  "it Services" : "it Services",
+  "Smart Home" : "Smart Home",
+  "Marketing" : "Marketing",
+  "Call Center" : "Call Center",
+  "Shipping" : "Shipping",
+  "Popular" : "Popular",
 
+  "شغل صفحة information  ********************" : "******************* شغل صفحة  information ",
+  "\uD83D\uDCCD Tanta, Gharbia, EGY" : "\uD83D\uDCCD Tanta, Gharbia, EGY",
+  "About us .." : "About us ..",
+  "   customize and convenient POS system that can be adoptable every industry.The best comprehensive company in Egypt, started as a company specialized in the field of computing and point of sale solutions, we jumped into the professional POS business and has grown since into point of sale, Hardware sales and POS solution supplier." : "   customize and convenient POS system that can be adoptable every industry.The best comprehensive company in Egypt, started as a company specialized in the field of computing and point of sale solutions, we jumped into the professional POS business and has grown since into point of sale, Hardware sales and POS solution supplier.",
+  "Our Mission .." : "Our Mission ..",
+  "   Our Mission is to achieve the reputation of a quality, high standard & reliable solution & service Provider company in the ICT industry." : "   Our Mission is to achieve the reputation of a quality, high standard & reliable solution & service Provider company in the ICT industry.",
+  "Our Vision .." : "Our Vision ..",
+  "   Our Vision is to achieve 100% customer satisfaction by delivering quality products and service at an affordable cost. we are aiming to become an entity in technology based corporate solutions, capable of demanding unconditional response from the targeted niche." : "   Our Vision is to achieve 100% customer satisfaction by delivering quality products and service at an affordable cost. we are aiming to become an entity in technology based corporate solutions, capable of demanding unconditional response from the targeted niche.",
+  "Follow us" : "Follow us",
+  "Share with Brilliant" : "Share with Brilliant",
+  "Request Service" : " Request Service",
+  "Whatsapp" : " Whatsapp",
+  "Contact" : " Contact",
+  "Phone" : " Phone",
+  "Call now" : " Call now",
+  "Mail us" : "Mail us",
+  "Call us" : "Call us",
+
+  "شغل صفحة الاعدادات*********************" : "*******************شغل صفحة الاعدادات",
+  "Settings" : "Settings",
+  "General" : "General",
+  "Change appearance" : "Change appearance",
+  "You want change to " : "You want change to ",
+  "Night mode" : "Night mode",
+  "Light mode" : "Light mode",
+  "Change Language" : "Change Language",
+  "You want change language to " : "You want change language to ",
+  "Cancel" : "Cancel",
+  "View" : "View",
+  "faq" : "faq",
+  "feature" : "feature",
+  "Documentation" : "Documentation",
+  "BUY NOW" : "BUY NOW",
+  "" : ""
 }
