--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -2,14 +2,29 @@
   "settings" : "الاعدادات",
   "home" : "الرئيسية",
   "information" : "عن الشركة",
+  "Categories" : "الفئــات",
+
+  "شغل صفحة Home  ********************" : "******************* شغل صفحة  Home ",
+  "Discover the special packages now, especially for you" : "أكتشف الباقات المميزة الآن, خصيصا من اجلك.",
+  "Gain Business awareness, grow and increase leads with the right digital marketing strategy" : "اكتساب زيادة العملاء المستهدفين مع استراتيجية التسويق الرقمي المناسبة.",
+  "Show Details" : "عرض التفاصيل",
   "Services" : "خدماتنا",
   "See all" : "عرض الكل",
-  "it Services" : "خدمات it",
-  "Smart Home" : "Smart Home",
+  "IT Services" : "خدمات الشبكات",
+  "Smart Home" : "البيت الذكي",
   "Marketing" : "التسويق",
-  "Call Center" : "كول سنتر",
+  "Call Center" : "الرد علي العملاء",
   "Shipping" : "الشحن",
-  "Popular" : "الأكثر مبيعاً",
+  "Popular" : "مـقـتـرح لـك",
+  "Security Cameras" : "كاميرات المراقبة",
+  "Recommended Service." : "الخدمة الموصي بها",
+  "Full advertising & Promotion process." : "عمليات الدعاية والاعلانات والترويج الكاملة.",
+  "Brilliant is one of the world's largest home automation." : "تعد شركة Brilliant واحدة من أكبر شركات التشغيل الآلي للمنزل في العالم.",
+  "comprehensive development of the communication." : "التطوير الشامل للاتصالات والتواصل.",
+
+  "شغل صفحة كاميرات المراقبة Popular  ********************" : "******************* شغل صفحة كاميرات المراقبة Popular ",
+
+  "The world of home security cameras can be a lot, especially if you're not familiar with home security in general." : "يمكن أن يكون عالم الكاميرات الأمنية المنزلية كثير ، خاصة إذا لم تكن على دراية بأمن المنزل بشكل عام.",
 
   "شغل صفحة information  ********************" : "******************* شغل صفحة  information ",
   "\uD83D\uDCCD Tanta, Gharbia, EGY" : "\uD83D\uDCCD طـنـطـا, الغربـيـة, مـصـر",
@@ -43,7 +58,115 @@
   "faq" : "الاسئلة الشائعة",
   "feature" : "المميزات",
   "Documentation" : "الاقتراحات والشكاوي",
+  "version : " : "اصدار : ",
   "BUY NOW" : "اطلـــب الان",
+
+  "شغل صفحة smart home  ********************" : "******************* شغل صفحة  smart home ",
+
+  "Smart home solutions. Easily expand your Smart Home with Smart devices. Start building your smart home now with a wide set of useful automation." : "حلول منزلية ذكية.الان قم بتوسيع منزلك بسهولة باستخدام الأجهزة الذكية.من خلالنا يمكنك مراقبة ، تحكم ، إدارة وحماية لمنزلك في أي وقت وعن بعد عن طريق الطرق السريعة أو ابلكيشن بتنزله علي موبيلك ، وده هيوفرلك الراحة والرفاهية والامان.",
+  "What Smart Home Solutions do you want ?" : "ما هي اختيارات المنزل الذكي التي تريدها؟",
+  "We provide complete solutions in various areas." : "نحن نقدم حلول كاملة في مختلف المجالات.",
+  "Consulting" : "استشارة",
+  "Schedule a free consultation with our representative for an informative, no pressure experience." : "حدد موعدًا لاستشارة مجانية مع ممثلنا للحصول على تجربة مفيدة بدون ضغوط.",
+  "Installation" : "التركيب",
+  "A professional installation at no cost to you to work in the way that best suits your needs." : "تركيب احترافي بدون تكلفة عليك للعمل بالطريقة التي تناسب احتياجاتك.",
+  "Maintenance" : "الصيانة",
+  "Protect your device with our smart maintenance plans." : "قم بحماية جهازك من خلال خطط الصيانة الذكية الخاصة بنا.",
+  "You will control all your household appliances such as:" : "هتتحكم في كل أجهزة بيتك زي:",
+  "Lighting" : "الأضاءه",
+  "Curtains" : "الستائر",
+  "air conditioning" : "التهوية والتدفئه والتكيف",
+  "smart cameras" : "الكاميرات الذكية",
+  "smart locks" : "الاقفال الذكية",
+  "smart doorbell" : "جرس الباب الذكي",
+  "You can open and close the lights remotely, and we can control the intensity of the lighting, and this will save you in energy consumption, thus achieving savings and control for you." : "هتقدر تفتح وتقفل الأنوارعن بعد , ونتحكم في شده الاضاءه وده هيوفرلك في استهلاك الطاقة وبكده بيحققلك التوفير والتحكم.",
+  "You will control the opening and closing of the blinds and you can organize a scenario by opening and closing the blinds at a certain time." : "هتتحكم في فتح وقفل الستائر وتقدر تنظم سيناريو بفتح وقفل الستائر في وقت معين.",
+  "You will control the temperature of the place at any time, and you can regulate a certain temperature and program it at a specific time." : "هتتحكم في درجة حرارة المكان في اي وقت, وتقدر تنظم درجة حرارة معينة وتبرمجها في وقت محدد.",
+  "You will leave an eye in your home, meaning that you will see your home and your children all the time and reassure them with smart cameras." : "هتخلي عين في بيتك بمعني انك هتشوف بيتك وأطفالك طول الوقت وتطمن عليهم مع الكاميرات الذكية.",
+  "You can open and close the doors from the application on the mobile or through the fingerprint, and you will receive a notification on your mobile." : "تقدر تفتح وتقفل الابواب من ابلكيشن موجود علي الموبيل أو من خلال البصمة وهيتبعتلك اشعار علي موبيلك بكدة.",
+  "It provides you with the ability to watch a video of the visitor and talk to him with audio and video." : "بيوفرلك انك تقدر تشوف فيديو للزائر وتتكلم معاه صوت وصورة.",
+  "We can make ordinary things smart, and do their own tasks remotely." : "يمكننا جعل الأشياء العادية أذكي، والقيام بمهامها الخاصة عن بعد.",
+  "Everyone is looking for safety, comfort and control over everything We can use the pieces to do something different." : "ولأن الجميع يبحث عن الأمان والراحة والتحكم في كل شيء يمكننا استخدامه يمكننا تثبيت بعض الأجهزة التي تمكنك من التحكم في المنزل بالكامل.",
+  "Some devices can be installed through which we can control the whole house." : "هتقدر تفتح وتقفل الأنوارعن بعد , ونتحكم في شده الاضاءه وده هيوفرلك في استهلاك الطاقة وبكده بيحققلك التوفير والتحكم.",
+  "You can make a script for your daily routine and record it on an application." : "هتتحكم في فتح وقفل الستائر وتقدر تنظم سيناريو بفتح وقفل الستائر في وقت معين.\nوكمان تتحكم في درجة حرارة المكان وتنظم درجة حرارة معينة وتبرمجها في وقت محدد.",
+  "Watch Video" : "شاهـد الفيديو",
+  "Request" : "أطلبنا",
+
+  "شغل صفحة IT  ********************" : "******************* شغل صفحة  IT ",
+  "Point Of Sale" : "نظام نقاط البيع",
+  "VOIP System" : "الصوت عبر بروتوكول الإنترنت",
+  "Backup Solutions" : "حلول النسخ الاحتياطي",
+  "Our time is characterized by amazing developments in technology and many “IT” services, if you are a small or large business owner you will need these services." : "يتميز وقتنا الحالى بتطورات مذهلة فى التكنولوجيا وخدمات ال “IT” كثيرة ومتعددة, إذا كنت صاحب عمل صغير أو كبير ستحتاج لهذه الخدمات.",
+  "Description :" : "الـوصـف :",
+  "Information :" : "ماذا نقدم لك :",
+  "Video camera recording peoples activities for detection is a video recording device that captures footage of your home and property" : "كاميرا فيديو تسجل أنشطة الأشخاص من أجل الكشف عنها عبارة عن جهاز تسجيل فيديو يلتقط لقطات من منزلك وممتلكاتك.",
+  "You can watch them on a smartphone, tablet or computer from anywhere using the Internet.Most home security cameras are motion activated and will record when motion is detected, as well as send you an alert on your phone.Here, were going over the different types of cameras, whether you need one or not, how to install them, and more. If its security camera-related, weve got you covered." : "يمكنك مشاهدتها على هاتف ذكي أو جهاز لوحي أو جهاز كمبيوتر من أي مكان باستخدام الإنترنت. \nيتم تنشيط معظم كاميرات مراقبة المنزل بالحركة وستقوم بالتسجيل عند اكتشاف الحركة،بالإضافة إلى إرسال تنبيه إليك علي هاتفك.",
+  "Modern point of sale systems are completely digital, which means that you can check in with the customer wherever you are." : "تعد أنظمة نقاط البيع الحديثة رقمية بالكامل ، مما يعني أنه يمكنك التحقق من العميل أينما كنت.",
+  "Point of sale system allows your business to accept payments from customers and track sales, point of sale system used to refer to the cash register machine in the store." : "يسمح نظام نقاط البيع لشركتك بقبول المدفوعات من العملاء وتتبع المبيعات, نظام نقطة بيع يستخدم للإشارة إلى آلة تسجيل المدفوعات النقدية في المتجر.",
+  "Technology that allows you to make voice calls using a broadband Internet connection instead of a regular or analog phone line." : "تقنية تسمح لك بإجراء مكالمات صوتية باستخدام اتصال إنترنت واسع النطاق بدلاً من خط هاتف عادي أو تمثيلي.",
+  "It is usually designed to help you back up server data to a local server Another, cloud server, or mixed system. In particular, backups for hybrid systems are becoming more common." : "عادة ما يتم تصميمه لمساعدتك على نسخ بيانات الخادم احتياطيا إلى خادم محلي آخر أو خادم سحابي أو نظام مختلط.\nعلى وجه الخصوص ، أصبح النسخ الاحتياطي للأنظمة الهجينة أكثر شيوعا.",
+  "Let’s Talk about your IT Services" : "لنتحدث عن استراتيجية خدمات الشبكـات الخاصة بك...",
+  "Get in touch with us" : "ابق على تواصل معنا",
+
+
+  "شغل صفحة call Center  ********************" : "******************* شغل صفحة  call Center ",
+  "The unified number communication system Now you can do a comprehensive development of the communication system In your organization, whatever its size" : "الكول سنتر خدمة الاتصال للرقم الموحد بيقدملك ربط منظومة الاتصال الكاملة في المؤسسه ويمكنك من التطوير الشامل لنظام الاتصالات بها مهما كان حجمها",
+  "Now you can do a comprehensive development of the communication system in your organization." : "الكول سنتر بيقدر يوفرلك العديد من المميزات اللي تهمك وكمان بيتعامل مع عدد كبير من المكالمات في نفس الوقت.\u200F ",
+  "Contacting" : "الاتصال",
+  "Send and receive calls from a computer or through an application on the phone from a unified number" : "إرسال واستقبال المكالمات من جهاز كمبيوتر أو من خلال تطبيق على الهاتف من رقم موحد.",
+  "Connecting" : "التواصل",
+  "Communicate with employees inside and outside the workplace for free" : "التواصل مع الموظفين داخل وخارج مكـان العمل مجانًا.",
+  "We Provide you" : "نحن نوفـر لـك",
+  "Possibility to work from outside the company s headquarters." : "إمكانية العمل من خارج مقر الشركة.",
+  "Recorded message and automatic reply (IVR) services." : "خدمات الرسائل المسجلة والرد اللتلقائي IVR.",
+  "Recording and monitoring of calls." : "تسجيل ومراقبة المكالمات.",
+  "Detailed reports for calls and employee performance indicators." : "تقارير تفصيلية للمكالمات ومؤشرات اداء الموظفين.",
+  "Automatically distribute calls." : "توزيع المكالمات بشكل اوتوماتيكي.",
+  "Control and keep calls outside work hours." : "التحكم والاحتفاظ بالمكالمات خارج مواعيد العمل.",
+  "Connectivity and the ability to receive and transfer calls between branches." : "الربط وامكانية استقبال وتحويل المكالمات بين الفروع.",
+  "A mobile application that allows receiving and sending calls outside the workplace." : "تطبيق موبايل يسمح باستقبال وارسال المكالمات خارج مقر العمل.",
+  "Let’s Talk about your Call Center Strategy" : "لنتحدث عن استراتيجية الكول سنتر الخاصة بك...",
+
+  "شغل صفحة marketing  ********************" : "******************* شغل صفحة  marketing ",
+  "Marketing services" : "خدمـات التسـويق",
+  "Strategy" : "اسـتراتيجيتنـا",
+  "Gain business awareness, grow and increase leads with the right digital marketing strategy" : "اكتسـب زيـادة فـي العمـلاء المحتملين \n مـع استـراتيجية التسويـق الرقمـي الصحيحـة.",
+  "SOCIAL MEDIA MARKETING" : "منصات التواصل الاجتماعي",
+  "Being on social platforms & building an audience interested in your product or service is essential, but the main axis to reach the largest number of customers is by spreading on each platform (Facebook, YouTube, Twitter..etc) with a complete marketing system" : "يعتبر الظهور علي منصات التواصل الاجتماعي من أساسيات التسويق الإلكتروني للحصول على جمهور مهتم بمنتجك أو خدمتك وذلك بالانتشار على كل منصة مثل (Facebook ، YouTube ، Twitter) بنظام تسويق متكامل.",
+  "Full Promotion Process" : "عمليات الترويج الاعلانية",
+  "We analyzes your field, starting from collecting customers data in terms of interests and behaviors that will benefit your business, organizing many advertising campaigns, and coordinating a complete study of the market and competitors." : " نقوم بتحليل مجالك ، بدءًا من جمع بيانات العملاء من حيث الاهتمامات والسلوكيات التي ستفيد عملك ، وتنظيم العديد من الحملات الإعلانية  ،بالاضافه الى دراسة كاملة عن المنافسين .",
+  "Digital Marketing" : "التسويق الرقمي والدعاية",
+  "Digital marketing is your smart gateway to increase your sales, reach your potential customers, and your organization progress with effective marketing methods and well-thought-out strategies." : "التسويق الرقمي هو بوابتك الذكية لزيادة مبيعاتك والوصول إلى العملاء المحتملين وتتقدم مؤسستك من خلال أساليب الدعاية والتسويق الفعالة والاستراتيجيات المدروسة جيدًا",
+  "We at Brilliant dedicate to provide our clients with service that exceed their expectations, and keep their business on track in achieving each goal with no limitation. With our resources and expertise, we want to be available to our local businesses to help them thrive and achieve their goals at an affordable cost. To ensure your success, we will commit to aid you in every step of the process." : "ولكي تتمكن من ممارسة انشطة التسويق الاكتروني بشكل صحيح يجب ان تكون نقطة البدايه علي يد شركة مختصه.\nومن هنا يأتي دور Brilliant  في شركتنا نعمل على تزويد عملائنا بخدمة تفوق توقعاتهم وذلك للحفاظ على مسار اعمالهم بالشكل الصحيح لتحقيق كل الأهداف دون قيود.\nمن خلال مواردنا وخبراتنا ، نريد أن نكون متاحين لشركاتنا لمساعدتهم على الازدهار وتحقيق الخدمات لأهدافهم بتكلفة معقولة، وكسب الوعى بالأعمال لضمان نجاحك وزيادة عملائك.\nونحن نلتزم بمساعدتك في كل خطوة من خطوات العملية.",
+  "Let’s Talk about your Digital Marketing Strategy" : "لنتحدث عن استراتيجية التسويق الرقمي الخاصة بك...",
+  "Please contact us, and we will respond to you within 24 hours." : "يرجى الاتصال بنا وسنرد عليك في غضون 24 ساعة.",
+  "Contact us" : "تـواصـل معنـا",
+
+  "شغل صفحة popular cameras  ********************" : "******************* شغل صفحة  popular cameras ",
+
+  "popular security cam info" : "كاميرا فيديو تسجل أنشطة الأشخاص من أجل الكشف عنها عبارة عن جهاز تسجيل فيديو يلتقط لقطات من منزلك وممتلكاتك.",
+  "popular security cam service details" : "  يمكنك مشاهدتها على هاتف ذكي أو جهاز لوحي أو جهاز كمبيوتر من أي مكان باستخدام الإنترنت.\n\n  يتم تنشيط معظم كاميرات مراقبة المنزل بالحركة وستقوم بالتسجيل عند اكتشاف الحركة ، بالإضافة إلى إرسال تنبيه إليك علي هاتفك.",
+
+  "شغل صفحة popular marketing  ********************" : "******************* شغل صفحة  popular marketing ",
+
+  "popular marketing info" : "التسويق الرقمي هو بوابتك الذكية لزيادة مبيعاتك ، والوصول إلى عملائك المحتملين وتقدم مؤسستك بأساليب تسويق فعالة واستراتيجيات مدروسة جيدًا.",
+  "popular marketing service details" : " يشمل الترويج للعلامات التجارية للتواصل مع العملاء المحتملين باستخدام الإنترنت وأشكال الاتصال الرقمية الأخرى.\n\n  لا يشمل ذلك البريد الإلكتروني ووسائل التواصل الاجتماعي والإعلانات المستندة إلى الويب فحسب ، بل يشمل أيضا الرسائل النصية ورسائل الوسائط المتعددة كقناة تسويق.",
+
+
+  "شغل صفحة popular smart home  ********************" : "******************* شغل صفحة  popular smart home ",
+
+  "popular smart home info" : "المنزل الذكي هو بناء أتمتة للمنزل و ربط مختلف الأجهزة والأنظمة في المنزل معاً بحيث يمكن التحكم فيها جميعا من أي مكان, وإحداث التفاعل المطلوب فيما بينها",
+  "popular smart home service details" : "  الجميع يبحث عن الأمان والراحة والتحكم في كل شيء يمكننااستخدام القطع لعمل شيء مختلف.\n\n  يمكننا جعل الأشياء العادية ذكية ، والقيام بمهامها الخاصة عن بعد.\n\n  يمكن تثبيت بعض الأجهزة التي يمكننا من خلالها التحكم في المنزل بأكمله.\n\n  يمكنك عمل نص لروتينك اليومي وتسجيله على أحد التطبيقات.",
+
+
+  "شغل صفحة popular call center  ********************" : "******************* شغل صفحة  popular call center ",
+
+  "popular call center info" : "الكول سنتر بيقدر يوفرلك العديد من المميزات اللي تهمك وكمان بيتعامل مع عدد كبير من المكالمات في نفس الوقت.",
+  "popular call center service details" : "  إرسال واستقبال المكالمات من جهاز كمبيوتر أو من خلال تطبيق على الهاتف من رقم موحد.\n\n  التواصل مع الموظفين داخل وخارج مكان العمل مجانا.",
+
+
+
+
   "" : ""
 
 
