--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -2,14 +2,29 @@
   "settings" : "settings",
   "home" : "Home",
   "information" : "Information",
+  "Categories" : "Categories",
+  "شغل صفحة Home  ********************" : "******************* شغل صفحة  Home ",
+
+  "Discover the special packages now, especially for you" : "Discover the special packages now, especially for you",
+  "Gain Business awareness, grow and increase leads with the right digital marketing strategy" : "Gain Business awareness, grow and increase leads with the right digital marketing strategy",
+  "Show Details" : "Show Details",
   "Services" : "Services",
   "See all" : "See all",
-  "it Services" : "it Services",
+  "IT Services" : "IT Services",
   "Smart Home" : "Smart Home",
   "Marketing" : "Marketing",
   "Call Center" : "Call Center",
   "Shipping" : "Shipping",
   "Popular" : "Popular",
+  "Security Cameras" : "Security Cameras",
+  "Recommended Service." : "Recommended Service.",
+  "Full advertising & Promotion process." : "Full advertising & Promotion process.",
+  "Brilliant is one of the world's largest home automation." : "Brilliant is one of the world's largest home automation.",
+  "comprehensive development of the communication." : "comprehensive development of the communication.",
+
+  "شغل صفحة كاميرات المراقبة Popular  ********************" : "******************* شغل صفحة كاميرات المراقبة Popular ",
+
+  "The world of home security cameras can be a lot, especially if you're not familiar with home security in general." : "The world of home security cameras can be a lot, especially if you're not familiar with home security in general.",
 
   "شغل صفحة information  ********************" : "******************* شغل صفحة  information ",
   "\uD83D\uDCCD Tanta, Gharbia, EGY" : "\uD83D\uDCCD Tanta, Gharbia, EGY",
@@ -43,6 +58,115 @@
   "faq" : "faq",
   "feature" : "feature",
   "Documentation" : "Documentation",
+  "version : " : "version : ",
   "BUY NOW" : "BUY NOW",
+
+  "شغل صفحة smart home  ********************" : "******************* شغل صفحة  smart home ",
+
+  "Smart home solutions. Easily expand your Smart Home with Smart devices. Start building your smart home now with a wide set of useful automation." : "Smart home solutions. Easily expand your Smart Home with Smart devices. Start building your smart home now with a wide set of useful automation.",
+  "What Smart Home Solutions do you want ?" : "What Smart Home Solutions do you want ?",
+  "We provide complete solutions in various areas." : "We provide complete solutions in various areas.",
+  "Consulting" : "Consulting",
+  "Schedule a free consultation with our representative for an informative, no pressure experience." : "Schedule a free consultation with our representative for an informative, no pressure experience.",
+  "Installation" : "Installation",
+  "A professional installation at no cost to you to work in the way that best suits your needs." : "A professional installation at no cost to you to work in the way that best suits your needs.",
+  "Maintenance" : "Maintenance",
+  "Protect your device with our smart maintenance plans." : "Protect your device with our smart maintenance plans.",
+  "You will control all your household appliances such as:" : "You will control all your household appliances such as:",
+  "Lighting" : "Lighting",
+  "Curtains" : "Curtains",
+  "air conditioning" : "air conditioning",
+  "smart cameras" : "smart cameras",
+  "smart locks" : "smart locks",
+  "smart doorbell" : "smart doorbell",
+  "You can open and close the lights remotely, and we can control the intensity of the lighting, and this will save you in energy consumption, thus achieving savings and control for you." : "You can open and close the lights remotely, and we can control the intensity of the lighting, and this will save you in energy consumption, thus achieving savings and control for you.",
+  "You will control the opening and closing of the blinds and you can organize a scenario by opening and closing the blinds at a certain time." : "You will control the opening and closing of the blinds and you can organize a scenario by opening and closing the blinds at a certain time.",
+  "You will control the temperature of the place at any time, and you can regulate a certain temperature and program it at a specific time." : "You will control the temperature of the place at any time, and you can regulate a certain temperature and program it at a specific time.",
+  "You will leave an eye in your home, meaning that you will see your home and your children all the time and reassure them with smart cameras." : "You will leave an eye in your home, meaning that you will see your home and your children all the time and reassure them with smart cameras.",
+  "You can open and close the doors from the application on the mobile or through the fingerprint, and you will receive a notification on your mobile." : "You can open and close the doors from the application on the mobile or through the fingerprint, and you will receive a notification on your mobile.",
+  "It provides you with the ability to watch a video of the visitor and talk to him with audio and video." : "It provides you with the ability to watch a video of the visitor and talk to him with audio and video.",
+  "We can make ordinary things smart, and do their own tasks remotely." : "We can make ordinary things smart, and do their own tasks remotely.",
+  "Everyone is looking for safety, comfort and control over everything We can use the pieces to do something different." : "Everyone is looking for safety, comfort and control over everything We can use the pieces to do something different.",
+  "Some devices can be installed through which we can control the whole house." : "Some devices can be installed through which we can control the whole house.",
+  "You can make a script for your daily routine and record it on an application." : "You can make a script for your daily routine and record it on an application.",
+  "Watch Video" : "Watch Video",
+  "Request" : "Request",
+
+  "شغل صفحة IT  ********************" : "******************* شغل صفحة  IT ",
+
+  "Point Of Sale" : "Point Of Sale",
+  "VOIP System" : "VOIP System",
+  "Backup Solutions" : "Backup Solutions",
+  "Our time is characterized by amazing developments in technology and many “IT” services, if you are a small or large business owner you will need these services." : "Our time is characterized by amazing developments in technology and many “IT” services, if you are a small or large business owner you will need these services.",
+  "Description :" : "Description :",
+  "Information :" : "Information :",
+  "Video camera recording peoples activities for detection is a video recording device that captures footage of your home and property" : "Video camera recording people's activities for detection is a video recording device that captures footage of your home and property",
+  "You can watch them on a smartphone, tablet or computer from anywhere using the Internet.Most home security cameras are motion activated and will record when motion is detected, as well as send you an alert on your phone.Here, were going over the different types of cameras, whether you need one or not, how to install them, and more. If its security camera-related, weve got you covered." : "You can watch them on a smartphone, tablet or computer from anywhere using the Internet.\nMost home security cameras are motion activated and will record when motion is detected, as well as send you an alert on your phone.\nHere, we're going over the different types of cameras, whether you need one or not, how to install them, and more. If its security camera-related, we've got you covered.",
+  "Modern point of sale systems are completely digital, which means that you can check in with the customer wherever you are." : "Modern point of sale systems are completely digital, which means that you can check in with the customer wherever you are.",
+  "Point of sale system allows your business to accept payments from customers and track sales, point of sale system used to refer to the cash register machine in the store." : "Point of sale system allows your business to accept payments from customers and track sales, point of sale system used to refer to the cash register machine in the store.",
+  "Technology that allows you to make voice calls using a broadband Internet connection instead of a regular or analog phone line." : "Technology that allows you to make voice calls using a broadband Internet connection instead of a regular or analog phone line.",
+  "It is usually designed to help you back up server data to a local server Another, cloud server, or mixed system. In particular, backups for hybrid systems are becoming more common." : "It is usually designed to help you back up server data to a local server Another, cloud server, or mixed system.\nIn particular, backups for hybrid systems are becoming more common.",
+  "Let’s Talk about your IT Services" : "Let’s Talk about your IT Services",
+  "Get in touch with us" : "Get in touch with us",
+
+
+  "شغل صفحة call Center  ********************" : "******************* شغل صفحة  call Center ",
+  "The unified number communication system Now you can do a comprehensive development of the communication system In your organization, whatever its size" : "The unified number communication system Now you can do a comprehensive development of the communication system In your organization, whatever its size",
+  "Now you can do a comprehensive development of the communication system in your organization." : "Now you can do a comprehensive development of the communication system in your organization.",
+  "Contacting" : "Contacting",
+  "Send and receive calls from a computer or through an application on the phone from a unified number" : "Send and receive calls from a computer or through an application on the phone from a unified number",
+  "Connecting" : "Connecting",
+  "Communicate with employees inside and outside the workplace for free" : "Communicate with employees inside and outside the workplace for free",
+  "We Provide you" : "We Provide you",
+  "Possibility to work from outside the company s headquarters." : "Possibility to work from outside the company's headquarters.",
+  "Recorded message and automatic reply (IVR) services." : "Recorded message and automatic reply (IVR) services.",
+  "Recording and monitoring of calls." : "Recording and monitoring of calls.",
+  "Detailed reports for calls and employee performance indicators." : "Detailed reports for calls and employee performance indicators.",
+  "Automatically distribute calls." : "Automatically distribute calls.",
+  "Control and keep calls outside work hours." : "Control and keep calls outside work hours.",
+  "Connectivity and the ability to receive and transfer calls between branches." : "Connectivity and the ability to receive and transfer calls between branches.",
+  "A mobile application that allows receiving and sending calls outside the workplace." : "A mobile application that allows receiving and sending calls outside the workplace.",
+  "Let’s Talk about your Call Center Strategy" : "Let’s Talk about your Call Center Strategy",
+
+  "شغل صفحة marketing  ********************" : "******************* شغل صفحة  marketing ",
+  "Marketing services" : "Marketing services",
+  "Strategy" : "Strategy",
+  "Gain business awareness, grow and increase leads with the right digital marketing strategy" : "Gain business awareness, grow and increase leads with the right digital marketing strategy",
+  "SOCIAL MEDIA MARKETING" : "SOCIAL MEDIA MARKETING",
+  "Being on social platforms & building an audience interested in your product or service is essential, but the main axis to reach the largest number of customers is by spreading on each platform (Facebook, YouTube, Twitter..etc) with a complete marketing system" : "Being on social platforms & building an audience interested in your product or service is essential, but the main axis to reach the largest number of customers is by spreading on each platform (Facebook, YouTube, Twitter..etc) with a complete marketing system",
+  "Full Promotion Process" : "Full Promotion Process",
+  "We analyzes your field, starting from collecting customers data in terms of interests and behaviors that will benefit your business, organizing many advertising campaigns, and coordinating a complete study of the market and competitors." : "We analyzes your field, starting from collecting customers data in terms of interests and behaviors that will benefit your business, organizing many advertising campaigns, and coordinating a complete study of the market and competitors.",
+  "Digital Marketing" : "Digital Marketing",
+  "Digital marketing is your smart gateway to increase your sales, reach your potential customers, and your organization progress with effective marketing methods and well-thought-out strategies." : "Digital marketing is your smart gateway to increase your sales, reach your potential customers, and your organization progress with effective marketing methods and well-thought-out strategies.",
+  "We at Brilliant dedicate to provide our clients with service that exceed their expectations, and keep their business on track in achieving each goal with no limitation. With our resources and expertise, we want to be available to our local businesses to help them thrive and achieve their goals at an affordable cost. To ensure your success, we will commit to aid you in every step of the process." : "We at Brilliant dedicate to provide our clients with service that exceed their expectations, and keep their business on track in achieving each goal with no limitation. With our resources and expertise, we want to be available to our local businesses to help them thrive and achieve their goals at an affordable cost. To ensure your success, we will commit to aid you in every step of the process.",
+  "Let’s Talk about your Digital Marketing Strategy" : "Let’s Talk about your Digital Marketing Strategy...",
+  "Please contact us, and we will respond to you within 24 hours." : "Please contact us, and we will respond to you within 24 hours.",
+  "Contact us" : "Contact us",
+
+  "شغل صفحة popular cameras  ********************" : "******************* شغل صفحة  popular cameras ",
+
+  "popular security cam info" : "The world of home security cameras can be a lot, especially if you're not familiar with home security in general.\n\nA video camera that records people's activities for detection is a device Video recording that captures snapshots of your home and property",
+  "popular security cam service details" : "  You can watch them on a smartphone, tablet or computer from anywhere using the Internet.\n\n  Most home security cameras are motion activated and will record when motion is detected, as well as send you an alert on your phone.",
+
+  "شغل صفحة popular marketing  ********************" : "******************* شغل صفحة  popular marketing ",
+
+  "popular marketing info" : "Digital marketing is your smart gateway to increase your sales, reach your potential customers and advance your organization with effective marketing methods and well-thought-out strategies.",
+  "popular marketing service details" : "  It includes promoting brands to connect with potential customers using the Internet and other digital forms of communication.\n\n  This includes not only email, social media, and web-based advertising, but also text and multimedia messaging as a marketing channel.",
+
+
+  "شغل صفحة popular smart home  ********************" : "******************* شغل صفحة  popular smart home ",
+
+  "popular smart home info" : "A smart home is building home automation and linking various devices and systems in the home together so that they can all be controlled from anywhere, and create the required interaction among them.",
+  "popular smart home service details" : "  Everyone is looking for safety, comfort and control in everything We can use the pieces to make something different.\n\n  We can make ordinary things smart, and do their own tasks remotely.\n\n  Some devices can be installed with which we can control the whole house.\n\n  You can text your daily routine and record it on an app.",
+
+
+  "شغل صفحة popular call center  ********************" : "******************* شغل صفحة  popular call center ",
+
+  "popular call center info" : "The call center can provide you with many features that interest you, and it also handles a large number of calls at the same time",
+  "popular call center service details" : "  Communicate with employees inside & outside the workplace for free.\n\n  Send and receive calls From a computer or through Application on the phone from a unified number.",
+
+
+
+
   "" : ""
 }
